2008-06-13  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTableTest.cs, DataSetTest.cs
	  We could use default value as is, not in string form. This makes
	  comparison more strict.

	* DataColumnTest.cs
	  Added test for non-DBNull case and changing DataType case.

2008-04-16  Veerapuram Varadhan <vvaradhan@novell.com>

	* DataSetReadXmlTest.cs: Added tests for same parent/child table
	name and id columns. 
	
2008-02-04 Arina Itkes <arinai@mainsoft.com>

	* DataTableTest5.cs: Removing of "Ignore" category
	  for tests on IXmlSerializable.ReadXml for empty DataTable.

2008-02-03 Arina Itkes <arinai@mainsoft.com>

	* XmlExportOfTypedDataSetTest.cs: added test for exporting of
	  a generated typed DataSet and DataTable by a same XmlExporter.
	
2008-01-28 Arina Itkes <arinai@mainsoft.com>

	* DataTableTest5.cs: added tests for implemetation 
	of IXmlSerializable.WriteXml in DataTable class.
	
2007-11-14  Atushi Enomoto  <atsushi@ximian.com>

	* DataSetTest.cs : added test for r89307 fix (it is for XmlSerializer
	  but needs to be in sys.data).
	* MonkeyDataSet.cs : test support classes (generated by xsd).

2007-10-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataColumnTest.cs: No longer derive from deprecated Assertion class.
	Code formatting. Added test for DateTimeMode.

2007-08-06  Nagappan A  <anagappan@novell.com>

	* DataTableTest.cs (Bug55978): In some cases this test case was
	failing with Invalid Date format. So modified the testcase to use
	invariant culture for DateTime.

2007-07-26  Nagappan A  <anagappan@novell.com>

	* DataTableTest.cs (Bug82109): Should always parse the object of
	type DateTime in InvariantCulture CultureInfo, Fixes Bug # 82109.

2007-05-18  Chris Toshok  <toshok@ximian.com>

	* DataViewTest.cs (DefaultColumnNameAddListChangedTest): new test
	for figuring out the sorts of events raised between 1.1 and 2.0
	when you add a column with the default name.

2007-02-23  Nagappan A  <anagappan@novell.com>
